...
    
    // MARK: - Lifecycle
    
    override func viewDidLoad() {
        super.viewDidLoad()
        navigationBarButton.setTitle("", for: .normal)
        webView.accessibilityIdentifier = "UnsplashWebView"
        webView.navigationDelegate = self
        setupObserver()
        presenter?.viewDidLoad()
    }
    
    // MARK: - Public Methods
...
