...
        configureButton()
    }
    
    // MARK: - Private Methods
    
    private func configureButton() {
        logButton.accessibilityIdentifier = "Authenticate"
        let attributes: [NSAttributedString.Key: Any] = [
            .foregroundColor: UIColor.black,
            .font: UIFont.systemFont(ofSize: 17, weight: .bold)
        ]
        let attributedText = NSAttributedString(string: "Войти", attributes: attributes)
        logButton.setAttributedTitle(attributedText, for: .normal)
...
